--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </label>
         </div>
-        <button class="input-wrapper__save-btn btn" onclick="saveMeme()">Сохранить</button>
+        <button class="input-wrapper__save-btn btn" hidden onclick="saveMeme()">Сохранить</button>
     </div>
     <div class="field-draw-image">
         <canvas class="field-draw-image__canvas" hidden></canvas>
